--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ disable = "wrong-import-order"
 [tool.pytest.ini_options]
 minversion = "6.0"
 log_cli_level = "INFO"
+DJANGO_SETTINGS_MODULE = "app.settings"
 
 # Linting tools configuration
 [tool.ruff]
