Fix linting config

--- a/tox.ini
+++ b/tox.ini
@@ -8,9 +8,10 @@ envlist = lint, unit, static, coverage-report
 
 [vars]
 src_path = {toxinidir}/src/
+app_path = {toxinidir}/django/lego/
 tst_path = {toxinidir}/tests/
 ;lib_path = {toxinidir}/lib/charms/operator_name_with_underscores
-all_path = {[vars]src_path} {[vars]tst_path}
+all_path = {[vars]src_path} {[vars]tst_path} {[vars]app_path}
 
 [testenv]
 setenv =
@@ -57,6 +58,7 @@ deps =
     -r{toxinidir}/requirements.txt
 commands =
     pydocstyle {[vars]src_path}
+    pydocstyle {[vars]app_path}
     # uncomment the following line if this charm owns a lib
     # codespell {[vars]lib_path}
     codespell {toxinidir} --skip {toxinidir}/.git --skip {toxinidir}/.tox \
