--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -32,6 +32,6 @@ header:
     - 'LICENSE'
     - 'trivy.yaml'
     - 'zap_rules.tsv'
-    - 'django/app/manage.py'
+    - 'django/manage.py'
     - 'django/app/**'
   comment: on-failure
