--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,8 @@ envlist = lint, unit, static, coverage-report
 
 [vars]
 src_path = {toxinidir}/src/
-app_path = {toxinidir}/django/lego/
+django_path = {toxinidir}/django
+app_path = {[vars]django_path}/lego/
 tst_path = {toxinidir}/tests/
 ;lib_path = {toxinidir}/lib/charms/operator_name_with_underscores
 all_path = {[vars]src_path} {[vars]tst_path} {[vars]app_path}
@@ -75,12 +76,13 @@ commands =
 description = Run unit tests
 deps =
     coverage[toml]
+    Django==4.2.8
     pytest
+    pytest-django
     -r{toxinidir}/requirements.txt
 commands =
-    coverage run --source={[vars]src_path} \
-        -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
-    coverage report
+    coverage run --source={[vars]app_path} \
+        -m pytest -v --tb native -s {[vars]app_path} {posargs}
 
 [testenv:coverage-report]
 description = Create test coverage report
@@ -89,7 +91,7 @@ deps =
     pytest
     -r{toxinidir}/requirements.txt
 commands =
-    coverage report
+    coverage report -m
 
 [testenv:static]
 description = Run static analysis tests
