--- a/tox.ini
+++ b/tox.ini
@@ -81,7 +81,7 @@ deps =
     pytest-django
     -r{toxinidir}/requirements.txt
 commands =
-    coverage run --source={[vars]app_path} \
+    coverage run --source={[vars]app_path} --omit={[vars]app_path}tests/* \
         -m pytest -v --tb native -s {[vars]app_path} {posargs}
 
 [testenv:coverage-report]
