--- a/tox.ini
+++ b/tox.ini
@@ -49,6 +49,7 @@ deps =
     pep8-naming
     pydocstyle>=2.10
     pylint
+    pylint-django
     pyproject-flake8<6.0.0
     pytest
     pytest-asyncio
@@ -57,6 +58,7 @@ deps =
     types-PyYAML
     types-requests
     -r{toxinidir}/requirements.txt
+    -r{[vars]django_path}/requirements.txt
 commands =
     pydocstyle {[vars]src_path}
     pydocstyle {[vars]app_path}
@@ -70,16 +72,16 @@ commands =
     isort --check-only --diff {[vars]all_path}
     black --check --diff {[vars]all_path}
     mypy {[vars]all_path}
-    pylint {[vars]all_path}
+    pylint --load-plugins=pylint_django --disable=django-not-configured {[vars]all_path}
 
 [testenv:unit]
 description = Run unit tests
 deps =
     coverage[toml]
-    Django==4.2.8
     pytest
     pytest-django
     -r{toxinidir}/requirements.txt
+    -r{[vars]django_path}/requirements.txt
 commands =
     coverage run --source={[vars]app_path} --omit={[vars]app_path}tests/* \
         -m pytest -v --tb native -s {[vars]app_path} {posargs}
@@ -90,6 +92,7 @@ deps =
     coverage[toml]
     pytest
     -r{toxinidir}/requirements.txt
+    -r{[vars]django_path}/requirements.txt
 commands =
     coverage report -m
 
@@ -98,6 +101,7 @@ description = Run static analysis tests
 deps =
     bandit[toml]
     -r{toxinidir}/requirements.txt
+    -r{[vars]django_path}/requirements.txt
 commands =
     bandit -c {toxinidir}/pyproject.toml -r {[vars]src_path} {[vars]tst_path}
 
@@ -121,6 +125,7 @@ description = Generate documentation for src
 deps =
     lazydocs
     -r{toxinidir}/requirements.txt
+    -r{[vars]django_path}/requirements.txt
 commands =
     ; can't run lazydocs directly due to needing to run it on src/* which produces an invocation error in tox
     sh generate-src-docs.sh
