--- a/tox.ini
+++ b/tox.ini
@@ -115,7 +115,7 @@ deps =
     pytest-operator
     -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
+    pytest -v --tb native --ignore={[vars]django_path} --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
 
 [testenv:src-docs]
 allowlist_externals=sh
