fix unit test execution

--- a/tox.ini
+++ b/tox.ini
@@ -84,7 +84,7 @@ deps =
     -r{[vars]django_path}/requirements.txt
 commands =
     coverage run --source={[vars]app_path} --omit={[vars]app_path}tests/* \
-        -m pytest -v --tb native -s {[vars]app_path} {posargs}
+        -m pytest -v --tb native -s {[vars]django_path} {posargs}
 
 [testenv:coverage-report]
 description = Create test coverage report
