--- a/tox.ini
+++ b/tox.ini
@@ -7,12 +7,10 @@ skip_missing_interpreters = True
 envlist = lint, unit, static, coverage-report
 
 [vars]
-src_path = {toxinidir}/src/
-django_path = {toxinidir}/django
-app_path = {[vars]django_path}/lego/
-tst_path = {toxinidir}/tests/
+src_path = {toxinidir}/lego/
+tst_path = {toxinidir}/lego/tests/
 ;lib_path = {toxinidir}/lib/charms/operator_name_with_underscores
-all_path = {[vars]src_path} {[vars]tst_path} {[vars]app_path}
+all_path = {[vars]src_path} {[vars]tst_path}
 
 [testenv]
 setenv =
@@ -58,10 +56,8 @@ deps =
     types-PyYAML
     types-requests
     -r{toxinidir}/requirements.txt
-    -r{[vars]django_path}/requirements.txt
 commands =
     pydocstyle {[vars]src_path}
-    pydocstyle {[vars]app_path}
     # uncomment the following line if this charm owns a lib
     # codespell {[vars]lib_path}
     codespell {toxinidir} --skip {toxinidir}/.git --skip {toxinidir}/.tox \
@@ -81,10 +77,9 @@ deps =
     pytest
     pytest-django
     -r{toxinidir}/requirements.txt
-    -r{[vars]django_path}/requirements.txt
 commands =
-    coverage run --source={[vars]app_path} --omit={[vars]app_path}tests/* \
-        -m pytest -v --tb native -s {[vars]django_path} {posargs}
+    coverage run --source={[vars]src_path} --omit={[vars]tst_path}* \
+        -m pytest -v --tb native -s {posargs}
 
 [testenv:coverage-report]
 description = Create test coverage report
@@ -92,7 +87,6 @@ deps =
     coverage[toml]
     pytest
     -r{toxinidir}/requirements.txt
-    -r{[vars]django_path}/requirements.txt
 commands =
     coverage report -m
 
@@ -104,28 +98,3 @@ deps =
     -r{[vars]django_path}/requirements.txt
 commands =
     bandit -c {toxinidir}/pyproject.toml -r {[vars]src_path} {[vars]tst_path}
-
-[testenv:integration]
-description = Run integration tests
-deps =
-    # Last compatible version with Juju 2.9
-    juju==3.0.4
-    pytest
-    pytest-asyncio
-    pytest-operator
-    -r{toxinidir}/requirements.txt
-commands =
-    pytest -v --tb native --ignore={[vars]django_path} --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs}
-
-[testenv:src-docs]
-allowlist_externals=sh
-setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/lib:{[vars]src_path}
-description = Generate documentation for src
-deps =
-    lazydocs
-    -r{toxinidir}/requirements.txt
-    -r{[vars]django_path}/requirements.txt
-commands =
-    ; can't run lazydocs directly due to needing to run it on src/* which produces an invocation error in tox
-    sh generate-src-docs.sh
