--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ envlist = lint, unit, static, coverage-report
 src_path = {toxinidir}/lego/
 tst_path = {toxinidir}/lego/tests/
 ;lib_path = {toxinidir}/lib/charms/operator_name_with_underscores
-all_path = {[vars]src_path} {[vars]tst_path}
+all_path = {[vars]src_path}
 
 [testenv]
 setenv =
