--- a/rockcraft.yaml
+++ b/rockcraft.yaml
@@ -1,3 +1,6 @@
+# Copyright 2024 Canonical Ltd.
+# See LICENSE file for licensing details.
+
 name: httprequest-lego-provider
 base: ubuntu:22.04
 version: "0.1"
