--- a/rockcraft.yaml
+++ b/rockcraft.yaml
@@ -4,9 +4,10 @@
 name: httprequest-lego-provider
 base: ubuntu:22.04
 version: "0.1"
-summary: A Django application implementing [HTTPRequest Lego Provider](https://go-acme.github.io/lego/dns/httpreq/)
+summary: A Django application implementing HTTPRequest Lego Provider
 description: |
-    A Django application implementing [HTTPRequest Lego Provider](https://go-acme.github.io/lego/dns/httpreq/)
+    A Django application implementing [HTTPRequest Lego Provider]
+    (https://go-acme.github.io/lego/dns/httpreq/)
 license: Apache-2.0
 platforms:
     amd64:
@@ -17,6 +18,11 @@ extensions:
     - django-framework
 
 parts:
+    # Exclude pyproject.yaml so that the python plugin doesn't handle this project as a package
+    django-framework/dependencies:
+        override-build: |
+            rm pyproject.toml
+            craftctl default
     django-framework/install-app:
         prime:
             - "django/app/httprequest_lego_provider"
