--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,6 +13,7 @@ jobs:
           repository: weiiwang01/rockcraft
           ref: feat-12f-django
           path: rockcraft
+          fetch-depth: 0
 
       - uses: canonical/setup-lxd@v0.1.1
 
@@ -23,7 +24,7 @@ jobs:
         working-directory: ./rockcraft
         run: |
           snapcraft --use-lxd
-          snap install --dangerous --classic rockcraft*.snap
+          sudo snap install --dangerous --classic rockcraft*.snap
           cp rockcraft*.snap ../
 
       - uses: actions/upload-artifact@v4
@@ -59,6 +60,7 @@ jobs:
           repository: weiiwang01/charmcraft
           ref: feat-12f-django
           path: charmcraft
+          fetch-depth: 0
 
       - uses: canonical/setup-lxd@v0.1.1
 
@@ -69,7 +71,7 @@ jobs:
         working-directory: ./charmcraft
         run: |
           snapcraft --use-lxd
-          snap install --dangerous --classic charmcraft*.snap
+          sudo snap install --dangerous --classic charmcraft*.snap
           cp charmcraft*.snap ../
 
       - uses: actions/upload-artifact@v4
