fix license header config

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -36,5 +36,5 @@ header:
     - 'manage.py'
     - 'app/**'
     - 'charm/lib/**'
-    - 'app/**/migrations/**'
+    - '**/migrations/**'
   comment: on-failure
