--- a/charm/charmcraft.yaml
+++ b/charm/charmcraft.yaml
@@ -44,10 +44,8 @@ config:
   options:
     git_repo:
       type: string
-      description: The repository URL where the DNS records are stored.
+      description: >
+        The repository URL where the DNS records are stored. The username has to be provided.
     git_ssh_key:
       type: string
       description: The private key for SSH authentication.
-    git_username:
-      type: string
-      description: The git username.
