--- a/charm/charmcraft.yaml
+++ b/charm/charmcraft.yaml
@@ -46,7 +46,7 @@ config:
       type: string
       description: |
         The repository URL where the DNS records are stored. The username has to be provided as in 
-        git+ssh://username@grepository@branch, where the branch is optional.
+        git+ssh://username@repository@branch, where the branch is optional.
     git_ssh_key:
       type: string
       description: The private key for SSH authentication.
