Fix ssh authentication

--- a/charm/charmcraft.yaml
+++ b/charm/charmcraft.yaml
@@ -44,7 +44,7 @@ config:
   options:
     git_repo:
       type: string
-      description: |
+      description: >
         The repository URL where the DNS records are stored. The username has to be provided as in 
         git+ssh://username@repository@branch, where the branch is optional.
     git_ssh_key:
