Add actions to manage users and domains

--- a/charm/charmcraft.yaml
+++ b/charm/charmcraft.yaml
@@ -50,3 +50,50 @@ config:
     git_ssh_key:
       type: string
       description: The private key for SSH authentication.
+
+actions:
+  create-user:
+      description: Create a user for the services that will be requesting the domains.
+      properties:
+        username:
+          description: User name to be created.
+          type: string
+      required:
+        - username
+  reset-password:
+      description: Reset the password for a user.
+      properties:
+        username:
+          description: User name to reset the password for.
+          type: string
+      required:
+        - username
+  allow-domains:
+      description: Grant user access to domains.
+      properties:
+        username:
+          description: User name to grant access for.
+          type: string
+      required:
+        - username
+        - domains
+  revoke-domains:
+      description: Revoke user access to domains.
+      properties:
+        username:
+          description: User name to revoke access for.
+          type: string
+        domains:
+          description: Comma separated list of domains to revoke access to.
+          type: string
+      required:
+        - username
+        - domains
+  list-domains:
+      description: List the domains an user has access to.
+      properties:
+        username:
+          description: User name to query for.
+          type: string
+      required:
+        - username
