--- a/tox.ini
+++ b/tox.ini
@@ -9,12 +9,17 @@ envlist = lint, unit, static, coverage-report
 [vars]
 src_path = {toxinidir}/httprequest_lego_provider/
 tst_path = {toxinidir}/httprequest_lego_provider/tests/
+charm_src_path = {toxinidir}/charm/src
+charm_tst_path = {toxinidir}/charm/src
 ;lib_path = {toxinidir}/lib/charms/operator_name_with_underscores
-all_path = {[vars]src_path}
+all_src_path = {[vars]src_path} {[vars]charm_src_path}
+all_tst_path = {[vars]tst_path} {[vars]charm_tst_path}
+all_django_path = {[vars]src_path} {[vars]tst_path}
+all_path = {[vars]all_src_path} {[vars]all_tst_path}
 
 [testenv]
 setenv =
-  PYTHONPATH = {toxinidir}:{toxinidir}/lib:{[vars]src_path}
+  PYTHONPATH = {toxinidir}:{toxinidir}/lib:{[vars]src_path}:{[vars]charm_src_path}
   PYTHONBREAKPOINT=ipdb.set_trace
   PY_COLORS=1
 passenv =
@@ -28,8 +33,8 @@ deps =
     black
     isort
 commands =
-    isort {[vars]all_path}
-    black {[vars]all_path}
+    isort {[vars]all_django_path}
+    black {[vars]all_django_path}
 
 [testenv:lint]
 description = Check code against coding style standards
@@ -56,19 +61,20 @@ deps =
     types-PyYAML
     types-requests
     -r{toxinidir}/requirements.txt
+    -r{toxinidir}/charm/requirements.txt
 commands =
-    pydocstyle {[vars]src_path}
+    pydocstyle {[vars]all_src_path}
     # uncomment the following line if this charm owns a lib
     # codespell {[vars]lib_path}
     codespell {toxinidir} --skip {toxinidir}/.git --skip {toxinidir}/.tox \
       --skip {toxinidir}/build --skip {toxinidir}/lib --skip {toxinidir}/venv \
       --skip {toxinidir}/.mypy_cache --skip {toxinidir}/icon.svg
     # pflake8 wrapper supports config from pyproject.toml
-    pflake8 {[vars]all_path} --ignore=W503
-    isort --check-only --diff {[vars]all_path}
-    black --check --diff {[vars]all_path}
-    mypy {[vars]all_path}
-    pylint --load-plugins=pylint_django --disable=django-not-configured {[vars]all_path}
+    pflake8 {[vars]all_django_path} --ignore=W503
+    isort --check-only --diff {[vars]all_src_path}
+    black --check --diff {[vars]all_src_path}
+    mypy {[vars]all_src_path}
+    pylint --load-plugins=pylint_django --disable=django-not-configured {[vars]all_src_path}
 
 [testenv:unit]
 description = Run unit tests
@@ -96,4 +102,4 @@ deps =
     bandit[toml]
     -r{toxinidir}/requirements.txt
 commands =
-    bandit -c {toxinidir}/pyproject.toml -r {[vars]src_path} {[vars]tst_path}
+    bandit -c {toxinidir}/pyproject.toml -r {[vars]all_src_path} {[vars]all_tst_path}
