Update test workflows

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,3 +10,9 @@ jobs:
     with:
       self-hosted-runner: true
       self-hosted-runner-label: "edge"
+  integration-tests:
+    uses: canonical/operator-workflows/.github/workflows/integration_test.yaml@main
+    secrets: inherit
+    with:
+      channel: 1.28-strict/stable
+      juju-channel: 3.4/stable
