--- a/tox.ini
+++ b/tox.ini
@@ -87,6 +87,16 @@ commands =
     coverage run --source={[vars]src_path} --omit={[vars]tst_path}* \
         -m pytest -v --tb native -s {posargs}
 
+[testenv:integration]
+description = Run integration tests (placeholder)
+deps =
+    pytest
+    pytest-asyncio
+    pytest-operator
+    -r{toxinidir}/requirements.txt
+commands =
+    python3 -c "print('integration test placeholder')"
+
 [testenv:coverage-report]
 description = Create test coverage report
 deps =
