Add resource-mapping to the publish workflow

--- a/.github/workflows/publish_charm.yaml
+++ b/.github/workflows/publish_charm.yaml
@@ -12,3 +12,4 @@ jobs:
     secrets: inherit
     with:
       integration-test-workflow-file: test.yaml
+      resource-mapping: '{"httprequest-lego-provider": "django-app-image"}'
