--- a/tox.ini
+++ b/tox.ini
@@ -93,9 +93,12 @@ deps =
     pytest
     pytest-asyncio
     pytest-operator
-    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/charm/requirements.txt
 commands =
-    python3 -c "print('integration test placeholder')"
+    pytest -v --tb native \
+        --ignore httprequest_lego_provider \
+        -k charm/tests/integration \
+        --log-cli-level=INFO -s {posargs}
 
 [testenv:coverage-report]
 description = Create test coverage report
