--- a/tox.ini
+++ b/tox.ini
@@ -85,7 +85,7 @@ deps =
     -r{toxinidir}/requirements.txt
 commands =
     coverage run --source={[vars]src_path} --omit={[vars]tst_path}* \
-        -m pytest -v --tb native -s {posargs}
+        -m pytest -v --tb native -s --ignore=charm/tests {posargs}
 
 [testenv:integration]
 description = Run integration tests (placeholder)
