--- a/tox.ini
+++ b/tox.ini
@@ -96,9 +96,7 @@ deps =
     -r{toxinidir}/charm/requirements.txt
 commands =
     pytest -v --tb native \
-        --ignore httprequest_lego_provider \
-        -k charm/tests/integration \
-        --log-cli-level=INFO -s {posargs}
+        --log-cli-level=INFO -s {posargs} charm/tests/integration
 
 [testenv:coverage-report]
 description = Create test coverage report
