--- a/charm/charmcraft.yaml
+++ b/charm/charmcraft.yaml
@@ -42,12 +42,12 @@ requires:
 
 config:
   options:
-    git_repo:
+    git-repo:
       type: string
       description: >
         The repository URL where the DNS records are stored. The username has to be provided as in 
         git+ssh://username@repository@branch, where the branch is optional.
-    git_ssh_key:
+    git-ssh-key:
       type: string
       description: The private key for SSH authentication.
 
