--- a/.trivyignore
+++ b/.trivyignore
@@ -1,3 +1,8 @@
 CVE-2022-40897
 CVE-2024-6345
-CVE-2024-34156 # https://github.com/canonical/pebble/issues/498
+# Pebble
+CVE-2024-34156
+CVE-2024-45338
+# statsd exporter
+CVE-2024-45337
+CVE-2024-45338
