--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,7 @@ description = Check code against coding style standards
 deps =
     black
     codespell
-    flake8<6.0.0
+    flake8
     flake8-builtins
     flake8-copyright<6.0.0
     flake8-docstrings>=1.6.0
@@ -53,7 +53,7 @@ deps =
     pydocstyle>=2.10
     pylint
     pylint-django
-    pyproject-flake8<6.0.0
+    pyproject-flake8
     pytest
     pytest-asyncio
     pytest-operator
@@ -88,7 +88,6 @@ setenv =
     DJANGO_SETTINGS_MODULE = api.tests.settings
     DJANGO_SECRET_KEY = sometestsecret
     DJANGO_DEBUG = true
-    DJANGO_RUNNING_TESTS = true
 commands =
     coverage run --source={[vars]api_src_path} --omit={[vars]api_tst_path}* \
         -m pytest -v --tb native -s --ignore=charm/tests {posargs}
