Chgdir before coverage report

--- a/tox.ini
+++ b/tox.ini
@@ -105,6 +105,7 @@ commands =
 
 [testenv:coverage-report]
 description = Create test coverage report
+changedir = httprequest_lego_provider
 deps =
     coverage[toml]
     pytest
