--- a/.trivyignore
+++ b/.trivyignore
@@ -3,3 +3,4 @@ CVE-2024-6345
 # statsd-exporter
 CVE-2024-45338 # golang.org/x/net
 CVE-2024-45337 # golang.org/x/crypto
+CVE-2025-22869 # golang.org/x/crypto
