Fix documentation issues highlighted by vale - A command-line linter for prose.
[1mUsage[0m:	[2mvale [options] [input...][0m
	[2mvale myfile.md myfile1.md mydir1[0m
	[2mvale --output=JSON [input...][0m

Vale is a syntax-aware linter for prose built with speed and extensibility in
mind. It supports Markdown, AsciiDoc, reStructuredText, HTML, and more.

To get started, you'll need a configuration file ([2m.vale.ini[0m):

[1mExample[0m:

	[2mMinAlertLevel = suggestion[0m
[2m[0m
[2m	[*][0m
[2m	BasedOnStyles = Vale[0m

See [4mhttps://vale.sh[0m for more setup information.

(Or use [2mvale --help[0m for a listing of all CLI options.)

--- a/.trivyignore
+++ b/.trivyignore
@@ -1,6 +1,7 @@
 CVE-2022-40897
 CVE-2024-6345
 CVE-2025-22869
+CVE-2025-47273
 # statsd-exporter
 CVE-2024-45338 # golang.org/x/net
 CVE-2024-45337 # golang.org/x/crypto
