--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ all_path = {[vars]all_src_path} {[vars]all_tst_path}
 
 [testenv]
 setenv =
-  PYTHONPATH = {toxinidir}:{toxinidir}/lib:{[vars]api_src_path}:{[vars]charm_src_path}
+  PYTHONPATH = {toxinidir}:{toxinidir}/charm/lib:{[vars]api_src_path}:{[vars]charm_src_path}
   PYTHONBREAKPOINT=ipdb.set_trace
   PY_COLORS=1
 passenv =
