--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,9 +10,10 @@ jobs:
     with:
       self-hosted-runner: true
       self-hosted-runner-label: "edge"
+      vale-style-check: true
   integration-tests:
     uses: canonical/operator-workflows/.github/workflows/integration_test.yaml@main
     secrets: inherit
     with:
       channel: 1.28-strict/stable
-      juju-channel: 3.4/stable
+      juju-channel: 3.6/stable
