--- a/tox.ini
+++ b/tox.ini
@@ -33,8 +33,8 @@ deps =
     black
     isort
 commands =
-    isort {[vars]all_api_path}
-    black {[vars]all_api_path}
+    isort {[vars]all_path}
+    black {[vars]all_path}
 
 [testenv:lint]
 description = Check code against coding style standards
