Fix tests and trivy

--- a/.trivyignore
+++ b/.trivyignore
@@ -6,3 +6,4 @@ CVE-2025-47273
 CVE-2024-45338 # golang.org/x/net
 CVE-2024-45337 # golang.org/x/crypto
 CVE-2025-22869 # golang.org/x/crypto
+CVE-2025-22874 # pebble: crypto/x509
