--- a/charm/charmcraft.yaml
+++ b/charm/charmcraft.yaml
@@ -48,9 +48,11 @@ requires:
   postgresql:
     interface: postgresql_client
     limit: 1
+    optional: false
   dns-record:
     interface: dns_record
     limit: 1
+    optional: false
 
 actions:
   create-user:
