add exception to trivyignore

--- a/.trivyignore
+++ b/.trivyignore
@@ -5,3 +5,4 @@ CVE-2025-47273
 # statsd-exporter
 CVE-2024-45338 # golang.org/x/net
 CVE-2024-45337 # golang.org/x/crypto
+CVE-2025-22874 # crypto/x509 in pebble
