--- a/.trivyignore
+++ b/.trivyignore
@@ -7,3 +7,4 @@ CVE-2024-45338 # golang.org/x/net
 CVE-2024-45337 # golang.org/x/crypto
 CVE-2025-22868 # golang.org/x/oauth2
 CVE-2025-22874 # crypto/x509 in pebble
+CVE-2025-47907 # stdlib in pebble and statsd_exporter
