Add this branch to workflow trigger for test

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -2,7 +2,7 @@ name: Documentation
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "add-updated-docs-workflow"]
   pull_request:
 
 jobs:
