--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -9,3 +9,6 @@ jobs:
   docs-checks:
     uses: canonical/operator-workflows/.github/workflows/docs.yaml@add-documentation-workflow
     secrets: inherit
+    with:
+      vale-files: '["README.md","CONTRIBUTING.md","charm/docs/"]'
+
