--- a/Makefile.docs
+++ b/Makefile.docs
@@ -7,9 +7,7 @@
 # Vale settings
 VALE_DIR ?= .vale
 PRAECEPTA_CONFIG 	?= .vale.ini
-VALE_DOCS_FILES 	?= charm/docs/ README.md CONTRIBUTING.md
-LYCHEE_DOCS_FILES 	?= "'./**/*.md' './**/*.rst'"
-LYCHEE_IGNORE		?= '.tox'
+DOCS_FILES 	?= charm/docs/ README.md CONTRIBUTING.md
 
 HAS_VALE			:= $(shell command -v vale;)
 HAS_LYCHEE			:= $(shell command -v lychee;)
@@ -54,8 +52,8 @@ vale-sync: ## Download and install external Vale configuration sources
 
 .PHONY: vale
 vale: .check-vale vale-sync ## Run Vale checks on docs
-	$(call msg,--- Running Vale checks on "$(VALE_DOCS_FILES)"... ---)
-	@vale --config=$(PRAECEPTA_CONFIG) $(VALE_DOCS_FILES)
+	$(call msg,--- Running Vale checks on "$(DOCS_FILES)"... ---)
+	@vale --config=$(PRAECEPTA_CONFIG) $(DOCS_FILES)
 
 # ==============================================================================
 # Main Lychee Targets
@@ -64,7 +62,7 @@ vale: .check-vale vale-sync ## Run Vale checks on docs
 .PHONY: lychee
 lychee: .check-lychee ## Run Lychee checks on docs
 	$(call msg,--- Running lychee checks on "$(LYCHEE_DOCS_FILES)"... ---)
-	@lychee "$(LYCHEE_DOCS_FILES)" --exclude-path $(LYCHEE_IGNORE)
+	@lychee $(DOCS_FILES)
 
 # ==============================================================================
 # Helper Targets
