Realign with templated files

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@ __pycache__/
 */*.sqlite3
 charm/lib/charms/
 
-# Ignore Vale config and StylesPath *except* for our local directories.
+
+# BEGIN VALE WORKFLOW IGNORE
 .vale/styles/*
 !.vale/styles/local
 !.vale/styles/config/
@@ -24,3 +25,4 @@ charm/lib/charms/
 
 .vale/styles/config/vocabularies/*
 !.vale/styles/config/vocabularies/local
+# END VALE WORKFLOW IGNORE
